--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -14,3 +14,10 @@ en:
       text2: "Has been declined by %{name}, for the following reason:"
       declined_at: "On %{declined_at}"
       thanks: "Regards"
+    accept_event:
+      subject: "Accepted event: %{title}"
+      welcome: "Hello %{name}"
+      text1: "The event: %{title}"
+      text2: "Has been accept by %{name}, for the following reason:"
+      accepted_at: "On %{accepted_at}"
+      thanks: "Regards"
