--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -14,3 +14,10 @@ es:
       text2: "Ha sido declinado por %{name}, por la siguiente razón:"
       declined_at: "A día %{declined_at}"
       thanks: "Un saludo"
+    accept_event:
+      subject: "Aceptado evento: %{title}"
+      welcome: "Hola %{name}"
+      text1: "El evento: %{title}"
+      text2: "Ha sido aceptado por %{name}, por la siguiente razón:"
+      accepted_at: "A día %{accepted_at}"
+      thanks: "Un saludo"
