Add count events as lobby by organization.

--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -5,6 +5,7 @@ en:
   organizations:
     title: Organizations registry
     description: Consult the organizations registered.
+    events_as_lobby: Reuniones realizadas
     subtitle:
       default: Last registered organizations
 
