Change some text. Accordion expanded dor default. Correct some spelling mistake.

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -96,8 +96,8 @@ es:
       inscription_date_asc: "Fecha de inscripción ascendente"
       inscription_date_desc: "Fecha de inscripción descendente"
       agent: "Nombre o apellido del agente"
-      filter_by_interests: "Filtrar por intereses"
-      filter_by_category: "Filtrar por categorias"
+      filter_by_interests: "Filtrar por área de interés"
+      filter_by_category: "Filtrar por categoría del lobby"
   show:
     participants: "Asisten"
     location: "Lugar"
