--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -33,7 +33,7 @@ en:
       legal_representant_name: "Nombres/Apellidos o Razón Social"
       display_user_title: "Persona fisica de contacto"
       user_name: "Nombre/Apellidos"
-      fiscal_year_title: "Datos de quien va a ejercer la actividad de lobby por cuenta propria"
+      fiscal_year_title: "Datos de quien va a ejercer la actividad de lobby por cuenta propia"
       fiscal_year: "Ejercicio anual"
       range_fund: "Fondos dedicados a la actividad e lobby"
       subvention: "Ayudas y/o subvenciones recibidas del Ayto"
@@ -54,7 +54,7 @@ en:
       agents_from: "Fecha de inicio de representación"
       agents_to: "Fecha de fin de representación"
 
-      interests_title: "Area de interés"
+      interests_title: "Área de interés"
 
       events_title: "Events"
 
@@ -155,7 +155,7 @@ en:
       contract: "¿Ha celebrado contratos y/o convenios con el Ayuntamiento de Madrid, sus organismos autónomos, sociedades mercantiles o consorcios en los que participe?"
 
     interest:
-      title_fieldset: "Area de Interés"
+      title_fieldset: "Área de Interés"
 
     agents:
       add_association: "Añadir Agentes"
