--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -35,7 +35,7 @@ es:
       legal_representant_name: "Nombres/Apellidos o Razón Social"
       display_user_title: "Persona fisica de contacto"
       user_name: "Nombre/Apellidos"
-      fiscal_year_title: "Datos de quien va a ejercer la actividad de lobby por cuenta propria"
+      fiscal_year_title: "Datos de quien va a ejercer la actividad de lobby por cuenta propia"
       fiscal_year: "Ejercicio anual"
       range_fund_title: "Fondos dedicados a la actividad e lobby"
       range_fund:
@@ -62,7 +62,7 @@ es:
       agents_from: "Fecha de inicio de representación"
       agents_to: "Fecha de fin de representación"
 
-      interests_title: "Area de interés"
+      interests_title: "Área de interés"
 
       events_title: "Eventos"
 
