--- a/config/locales/public.en.yml
+++ b/config/locales/public.en.yml
@@ -6,7 +6,7 @@ en:
     english: "Inglés"
   main:
     form:
-      keyword: "Palabra clave"
+      keyword: "Search by keywork or agent name"
       main_area: "Área/Distrito/Organismo autónomo"
       child_area: "Dirección general"
       holder: "Titular de la agenda"
