--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -78,7 +78,7 @@ es:
     back: "Volver al listado"
     form:
       title: "Utiliza estos filtros para buscar la información que más te interesa."
-      keyword: "Palabra clave"
+      keyword: "Palabra clave o nombre del agente"
       main_area: "Área/Distrito/Organismo autónomo"
       child_area: "Dirección general"
       holder: "Titular de la agenda"
