--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -121,7 +121,7 @@ es:
       email: "Correo electrónico"
 
     contact_person:
-      title_fieldset: "Persona fisica de contacto"
+      title_fieldset: "Persona física de contacto"
       name: "Nombre"
       surnames: "Apellidos"
       phone: "Teléfono"
@@ -145,7 +145,7 @@ es:
 
     represented_entities:
       add_represented_entities: "Añadir Entidades a las que se representa"
-      title_fieldset: "Datos personas o entidades sin personalidad a quines se va a representar"
+      title_fieldset: "Datos personas o entidades sin personalidad a quien se va a representar"
       identifier: "DNI, NIF, NIE"
       name: "Nombre o razón social"
       first_surname: "Primer apellido"
@@ -166,15 +166,15 @@ es:
 
     agents:
       add_association: "Añadir Agentes"
-      title_fieldset: "Agentes"
-      identifier: "DNI, NIE, NIF"
+      title_fieldset: "Agentes (personas habilitadas por el lobby para reunirse)"
+      identifier: "DNI, NIE, NIF, Pasaporte"
       name: "Nombre"
       first_surname: "Primer apellido"
       second_surname: "Segundo apellido"
       from: "Desde"
       to: "Hasta"
-      public_assignments: "¿Las personas fisicas que van actuar por cuenta de quien se inscribe han trabajado al servicio del Ayuntamiento de Madrid, sus organismos públicos, sociedades mercantiles o consorcios en los que participe en los dos años previos a la fecha de presentaciòn de la declaración responsable?"
-      only_fill_if_answer: "Solo rellenar el campo en caso de cumplir la pregunta."
+      public_assignments: "¿Esta persona ha trabajado al servicio del Ayuntamiento de Madrid, sus organismos públicos, sociedades mercantiles o consorcios en los que participe, en algún momento de los dos años previos a la fecha desde la que va actuar por cuenta de quien se inscribe? En caso afirmativo, indique los datos (organismo, puesto o cargo y las fechas en las que lo desempeñó)"
+      public_assignments_only_show: "¿Esta persona ha trabajado al servicio del Ayuntamiento de Madrid, sus organismos públicos, sociedades mercantiles o consorcios en los que participe, en algún momento de los dos años previos a la fecha desde la que va actuar por cuenta de quien se inscribe?"
 
     terms:
       title_fieldset: "Aceptacion condiciones declaración responsable"
