Changed some translate. Added to agent 1, agent 2 and company 1. company 2. Added eye button. Added faq into seed.

--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -101,7 +101,7 @@ en:
         no_record: "Ninguno"
         generalitat_catalunya: "Generalidad catalunya"
         cnmc: "CNMC"
-        europe_union: "Europe union"
+        europe_union: "Unión Europea"
         others: "Otro"
 
     legal_representant:
