--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -3,6 +3,7 @@ es:
     menu_title: "Gestión del lobby"
     close: "Cerrar"
     logout: "Salir"
+    btn_admin: "Administración"
     access_denied: "No dispone de privilegios suficientes para realizar esta operación"
     confirm: "¿Está seguro?"
     edit: "Editar"
@@ -74,7 +75,7 @@ es:
     edit_position: "Editar cargo"
     must_have_position: "Es necesario añadir al menos un cargo"
 
-    events: "Eventos"
+    events: "Solicitudes de eventos"
     event_history_updates: "Última actualización"
     event_update_user: "Usuario"
     event_update_date: "Fecha"
@@ -104,7 +105,7 @@ es:
     meeting_lobby_activity: "¿Es una reunión donde se hará actividad de Lobby?"
     meeting_lobby_activity_yes: "si"
     meeting_lobby_activity_no: "no"
-    meeting_lobby_activity_organization: "Organización"
+    meeting_lobby_activity_organization: "Lobby"
     meeting_lobby_activity_input: "Buscar una organización o persona fīsica por nombre o dni"
     meeting_lobby_category: "Categoria: "
     meeting_lobby_activity_represented_entities: "Empresas Representadas"
@@ -125,7 +126,8 @@ es:
     companies: "Organizaciones"
     new_company: "Nueva organización"
     description: "Descripción"
-    new_event: "Nuevo evento"
+    title_event: "Solicitud de evento"
+    new_event: "Nueva solicitud"
     edit_event: "Editar evento"
     edit_agents: "Editar agentes"
     edit_title_interests: "Editar áreas de interés"
