--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -3,9 +3,9 @@
 es:
   devise:
     sign_in: "Entrar"
-    email: "email"
-    password: "password"
-    forgot_password: "¿ Contraseña olvidada ?"
+    email: "Correo electrónico"
+    password: "Contraseña"
+    forgot_password: "¿ Olvidó contraseña ?"
     remember: "Recordar en este ordenador"
     password_reset_instructions: "Le enviaremos instrucciones de restablecimiento de contraseña"
     reset_password: "Restablecer la contraseña"
