--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -12,6 +12,7 @@ es:
     cancel: "Cancelar"
     action: "Acción"
     actions: "Acciones"
+    state: "Estado"
     add: "Añadir"
     back: "Volver"
     none: "Ninguno"
