Add correct text by current_user role when update password. When a user changes his password he does not lose the session

--- a/config/locales/passwords.en.yml
+++ b/config/locales/passwords.en.yml
@@ -2,5 +2,5 @@ en:
   admin:
     passwords:
       update:
-        notice: Password updated correctly. Re-login with the new password.
+        notice: Password updated correctly.
         alert: The passwords entered do not match.
