--- a/config/locales/passwords.es.yml
+++ b/config/locales/passwords.es.yml
@@ -2,5 +2,5 @@ es:
   admin:
     passwords:
       update:
-        notice: Contraseña actualizada correctamente. Vuelva a iniciar sesión con la contraseña nueva.
+        notice: Contraseña actualizada correctamente.
         alert: Las contraseñas introducidas no coinciden
