Changed changed arrangement in the attachment. Changed text.

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -118,9 +118,9 @@ es:
     position_not_in_participants: "El titular de agenda se ha incluido también como asistente"
     manager_general_remarks_title: "Observaciones generales Gestor de agendas"
     attachments: "Archivos adjuntos"
-    attachments_description: "Descripción de archivos adjuntos"
-    attachments_public: "Archivos adjuntos públicos"
-    attachments_private: "Archivos adjuntos privados"
+    attachments_description: "Descripción de archivo adjunto"
+    attachments_public: "Archivos adjuntos público"
+    attachments_private: "Archivos adjuntos privado"
     only_pdf: "Solo PDF"
     name: "Nombre"
     file: "Archivo"
