Changed pedido with solicitado

--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -1,6 +1,6 @@
 es:
   status:
-    requested: "Pedido"
+    requested: "solicitado"
     accepted: "Aceptado"
     done: "Hecho"
     declined: "Rechazado"
