Changed text Guardar with Enviar la solicitud.

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -10,6 +10,7 @@ es:
     edit: "Editar"
     delete: "Eliminar"
     save: "Guardar"
+    save_request: "Enviar la solicitud"
     cancel: "Cancelar"
     action: "Acción"
     actions: "Acciones"
