--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -18,6 +18,7 @@ es:
     add: "Añadir"
     back: "Volver"
     none: "Ninguno"
+    select: "Seleccionar"
     frontend: "Zona pública"
     basic_data: "Datos"
     change_password: "Cambiar contraseña"
