Display correct error on attachment validation.

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -70,5 +70,5 @@ en:
         company: "Asistente: Organización"
       event/attachments:
         title: "Archivo adjunto: Título"
-        file: "Archivo adjunto: Archivo"
+        file: "Archivo adjunto:"
         public: "Archivo adjunto: Privacidad"
