--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -45,6 +45,7 @@ es:
         first_surname: "Representante Legal: Apellido"
         email: "Representante Legal: email"
       organization/user:
+        identifier: "Persona física de contacto: Identificador"
         first_name: "Persona física de contacto: Nombre"
         last_name: "Persona física de contacto: Apellidos"
         email: "Persona física de contacto: email"
@@ -65,5 +66,5 @@ es:
         company: "Asistente: Organización"
       event/attachments:
         title: "Archivo adjunto: Título"
-        file: "Archivo adjunto: Archivo"
+        file: "Archivo adjunto:"
         public: "Archivo adjunto: Privacidad"
