Add margin bottom to title agendas. Organizations: Fix filters and search text.

--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -9,6 +9,7 @@ es:
     results_title: Resultados de la búsqueda
     subtitle:
       default: Incorporaciones más recientes
+      order_results: Ordenacion de los resultado
 
     show:
       state: "Estado"
