--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -6,10 +6,9 @@ es:
     title: Consulta del Registro de Lobbies
     description: Consulte las organizaciones registradas.
     events_as_lobby: Reuniones realizadas
-    results_title: Resultados de la búsqueda
+    results_title: Resultados
     subtitle:
       default: Incorporaciones más recientes
-      order_results: Ordenacion de los resultado
 
     show:
       state: "Estado"
