--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -135,6 +135,7 @@ es:
       fiscal_year: "Ejercicio anual"
       range_fund_title: "Fondos"
       range_fund:
+        select: "Seleccionar"
         range_1: "Inferiores a 9.999 euros"
         range_2: "De 10.000 a 24.999 euros"
         range_3: "De 25.000 a 49.000 euros"
@@ -156,6 +157,7 @@ es:
       fiscal_year: "Ejercicio anual"
       range_fund_title: "Fondos"
       range_fund:
+        select: "Seleccionar"
         range_1: "Inferiores a 9.999 euros"
         range_2: "De 10.000 a 24.999 euros"
         range_3: "De 25.000 a 49.000 euros"
